--- a/.github/workflows/docker-build-cloud.yml
+++ b/.github/workflows/docker-build-cloud.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          tags: "xlsoftpartner/net-client"
+          context: "--platform linux/amd64,linux/arm64 ."
+          tags: "xlsoftpartner/net-client:alpine3.19"
           # For pull requests, export results to the build cache.
           # Otherwise, push to a registry.
           outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,push=true' }}
