--- a/.github/workflows/docker-build-cloud.yml
+++ b/.github/workflows/docker-build-cloud.yml
@@ -28,10 +28,11 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          sbom: true
           platforms: linux/amd64,linux/arm64
           context: .
           tags: "xlsoftpartner/net-client:alpine3.20"
           # For pull requests, export results to the build cache.
           # Otherwise, push to a registry.
-          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,sbom=true,push=true' }}
+          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,push=true' }}
   
