--- a/.github/workflows/docker-build-cloud.yml
+++ b/.github/workflows/docker-build-cloud.yml
@@ -1,9 +1,10 @@
-name: build-cloud
+name: docker-build-cloud
 
 on:
   push:
     branches:
-      - "build-cloud"
+      - "master"
+  workflow_dispatch:
 
 jobs:
   build-cloud:
@@ -31,7 +32,7 @@ jobs:
           sbom: true
           platforms: linux/amd64,linux/arm64
           context: .
-          tags: ${{ secrets.DOCKERHUB_IMAGE_TAG }}
+          tags: ${{ vars.DOCKERHUB_IMAGE_TAG }}
           # For pull requests, export results to the build cache.
           # Otherwise, push to a registry.
           outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry,push=true' }}
