--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,10 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ vars.DOCKERHUB_IMAGE_NAME }}:$(date +%Y%m%d)
+      run: docker build . --file Dockerfile \\
+        --platform linux/amd64,linux/arm64 \\
+        --sbom=true \\
+        --tag ${{ vars.DOCKERHUB_IMAGE_NAME }}:$(date +%Y%m%d)
       
     - name: Push the Docker image
       run: docker push ${{ vars.DOCKERHUB_IMAGE_NAME }}:$(date +%Y%m%d)
