--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,12 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Check parameter
+      run: echo "Date " $(date +%Y%m%d) \\
+        echo "Image " ${{ vars.DOCKERHUB_IMAGE_NAME }} \\
+        docker buildx build --help
+      
+    
     - name: Build the Docker image
       run: docker build --file Dockerfile \\
         --platform linux/amd64,linux/arm64 \\
