--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,15 +21,9 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Check parameter
-      run: echo "Date " $(date +%Y%m%d) \\
-        echo "Image " ${{ vars.DOCKERHUB_IMAGE_NAME }} \\
-        docker buildx build --help
-      
     
     - name: Build the Docker image
-      run: docker build --file Dockerfile \\
+      run: docker buildx build --file Dockerfile \\
         --platform linux/amd64,linux/arm64 \\
         --sbom=true \\
         --tag ${{ vars.DOCKERHUB_IMAGE_NAME }}:$(date +%Y%m%d) .
