--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,26 +10,33 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - name: Build the Docker image
-      run: docker buildx build --file Dockerfile \\
-        --platform linux/amd64,linux/arm64 \\
-        --sbom=true \\
-        --tag ytabuchi/net-client:$(date +%Y%m%d) .
-      
-    - name: Push the Docker image
-      run: docker push ytabuchi/net-client:$(date +%Y%m%d)
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Get date
+      id: date
+      run: echo "date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        sbom: true
+        push: true
+        tags: ${{ secrets.DOCKERHUB_IMAGE_NAME }}:${{ steps.date.outputs.date }}
 
     - name: Push the Docker image with latest tag
-      run: docker tag ytabuchi/net-client:$(date +%Y%m%d) ytabuchi/net-client:latest && docker push ytabuchi/net-client:latest
+      run: docker tag ${{ secrets.DOCKERHUB_IMAGE_NAME }}:${{ steps.date.outputs.date }} ${{ secrets.DOCKERHUB_IMAGE_NAME }}:latest && docker push ${{ secrets.DOCKERHUB_IMAGE_NAME }}:latest
