--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -32,10 +35,10 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
+        context: .
         platforms: linux/amd64,linux/arm64
         sbom: true
         push: true
-        tags: ${{ secrets.DOCKERHUB_IMAGE_NAME }}:${{ steps.date.outputs.date }}
-
-    - name: Push the Docker image with latest tag
-      run: docker tag ${{ secrets.DOCKERHUB_IMAGE_NAME }}:${{ steps.date.outputs.date }} ${{ secrets.DOCKERHUB_IMAGE_NAME }}:latest && docker push ${{ secrets.DOCKERHUB_IMAGE_NAME }}:latest
+        tags: |
+          ${{ secrets.DOCKERHUB_IMAGE_NAME }}:${{ steps.date.outputs.date }}
+          ${{ secrets.DOCKERHUB_IMAGE_NAME }}:latest
