feat: Add scheduled build

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,8 @@ on:
   # pull_request:
   #   branches: [ "master" ]
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 0'  # 毎週日曜日の午前0時（UTC）
 
 jobs:
 
