--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
       id: baseimage
       run: |
         FROM_LINE=$(grep -m 1 '^FROM' Dockerfile)
-        IMAGE=$(echo "$FROM_LINE" | awk '{print $2}' | sed 's/://')
+        echo "$FROM_LINE" | awk '{print $2}' | sed 's/://' >> $GITHUB_OUTPUT
 
     - name: Get date
       id: date
@@ -48,5 +48,5 @@ jobs:
         sbom: true
         push: true
         tags: |
-          ${{ vars.DOCKERHUB_IMAGE_NAME }}:${{ steps.baseimage.outputs.image }}_${{ steps.date.outputs.date }}
+          ${{ vars.DOCKERHUB_IMAGE_NAME }}:${{ steps.baseimage.outputs.baseimage }}_${{ steps.date.outputs.date }}
           ${{ vars.DOCKERHUB_IMAGE_NAME }}:latest
