--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 0'  # 毎週日曜日の午前0時（UTC）
+    - cron: '0 0 1 * *'  # Runs at 00:00, on day 1 of the month（UTC）
 
 jobs:
 
